--- a/android/build.gradle
+++ b/android/build.gradle
@@ -34,11 +34,17 @@ android {
     defaultConfig {
         minSdkVersion 16
     }
+    buildTypes {
+        release {
+            shrinkResources false
+            minifyEnabled false
+        }
+    }
 }
 
 dependencies {
     implementation 'androidx.core:core-ktx:1.5.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'com.github.LinkFive.android-purchases-sdk:android-purchases:0.0.3'
+    implementation 'com.github.LinkFive.android-purchases-sdk:android-purchases:0.1.0'
 }
