--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,9 @@ dependencies:
     sdk: flutter
   in_app_purchase: ^1.0.6
   http: ^0.13.3
-  package_info: ^2.0.2
+  package_info_plus: ^1.0.3
   provider: ^5.0.0
+  device_info_plus: "^2.0.1"
 
 dev_dependencies:
   flutter_test:
