--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   package_info_plus: ^1.0.3
   provider: ^5.0.0
   device_info_plus: "^2.0.1"
+  in_app_purchase_ios: ^0.1.3
 
 dev_dependencies:
   flutter_test:
