--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: linkfive_purchases
 description: LinkFive Purchases flutter sdk
-version: 0.0.1
-homepage:
+version: 1.0.0
+homepage: www.linkfive.io
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
