--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,10 @@
 name: linkfive_purchases
-description: LinkFive Purchases flutter sdk
+description: LinkFive Purchases flutter sdk. This will allow your app to use the LinkFive subscription service.
 version: 1.0.0
-homepage: www.linkfive.io
+homepage: https://www.linkfive.io
+repository: https://github.com/LinkFive/flutter-purchases-sdk
+issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
+documentation: https://github.com/LinkFive/flutter-purchases-sdk
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
@@ -16,20 +19,15 @@ dependencies:
   provider: ^5.0.0
   device_info_plus: "^2.0.1"
   in_app_purchase_ios: ^0.1.3
+  in_app_purchase_platform_interface: ^1.1.0
+  in_app_purchase_android: ^0.1.4+1
+  collection: ^1.15.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter.
 flutter:
-  # This section identifies this Flutter project as a plugin project.
-  # The 'pluginClass' and Android 'package' identifiers should not ordinarily
-  # be modified. They are used by the tooling to maintain consistency when
-  # adding or updating assets for this project.
   plugin:
     platforms:
       android:
@@ -37,34 +35,3 @@ flutter:
         pluginClass: LinkFivePurchasesPlugin
       ios:
         pluginClass: LinkfivePurchasesPlugin
-
-  # To add assets to your plugin package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware.
-
-  # To add custom fonts to your plugin package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
