--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -14,16 +14,10 @@ dependencies:
     sdk: flutter
 
   linkfive_purchases:
-    # When depending on this package from a real application you should use:
-    #   linkfive_purchases: ^x.y.z
-    # See https://dart.dev/tools/pub/dependencies#version-constraints
-    # The example app is bundled with the plugin so we use a path dependency on
-    # the parent directory to use the current plugin's version.
     path: ../
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  in_app_purchases_paywall_ui: ^0.1.1
   cupertino_icons: ^1.0.2
+  provider: ^5.0.0
 
 dev_dependencies:
   flutter_test:
