--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,7 +7,7 @@ issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
 documentation: https://github.com/LinkFive/flutter-purchases-sdk
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.13.0 <3.0.0"
   flutter: ">=1.20.0"
 
 dependencies:
@@ -21,6 +21,7 @@ dependencies:
   in_app_purchase_ios: ^0.1.3
   in_app_purchase_platform_interface: ^1.1.0
   in_app_purchase_android: ^0.1.4+1
+  in_app_purchases_interface: ^0.0.2
   collection: ^1.15.0
 
 dev_dependencies:
