--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
 
   linkfive_purchases:
     path: ../
-  in_app_purchases_paywall_ui: ^0.1.1
+  in_app_purchases_paywall_ui: ^0.3.1
+    #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
 
