--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases
 description: LinkFive Purchases flutter sdk. This will allow your app to use the LinkFive subscription service.
-version: 1.0.1
+version: 1.1.0
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
@@ -21,7 +21,10 @@ dependencies:
   in_app_purchase_ios: ^0.1.3
   in_app_purchase_platform_interface: ^1.1.0
   in_app_purchase_android: ^0.1.4+1
-  in_app_purchases_interface: ^0.0.2
+  in_app_purchases_interface: ^0.0.5
+    #path: ../in_app_purchases_paywall/packages/in_app_purchases_interface
+  in_app_purchases_intl: ^0.0.2
+    #path: ../in_app_purchases_paywall/packages/in_app_purchases_intl
   collection: ^1.15.0
 
 dev_dependencies:
