linkfive_purchases v1.2.0 moved to packages folder. add new provider plugin update to interface 0.0.6 and fetches the subscriptions on load call update intl 0.0.3 remove android folder

--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,13 +12,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
   linkfive_purchases:
-    path: ../
-  in_app_purchases_paywall_ui: ^0.3.1
-    #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
+    path: ../packages/linkfive_purchases
+  linkfive_purchases_provider:
+    path: ../packages/linkfive_purchases_provider
+  in_app_purchases_paywall_ui: #^0.3.1
+    path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
   cupertino_icons: ^1.0.2
-  provider: ^5.0.0
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
