--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -30,3 +30,10 @@ dev_dependencies:
     sdk: flutter
 
 flutter:
+  plugin:
+    platforms:
+      android:
+        package: io.linkfive.linkfive_purchases
+        pluginClass: LinkfivePurchasesPlugin
+      ios:
+        pluginClass: LinkfivePurchasesPlugin
