--- a/packages/linkfive_purchases_provider/pubspec.yaml
+++ b/packages/linkfive_purchases_provider/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases_provider
-description: linkfive_purchases wrapped in an easy to use Provider
-version: 1.2.0
+description: linkfive_purchases wrapped in an easy to use Provider. Register the provider and use linkfive everywhere.
+version: 1.3.0
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
@@ -14,7 +14,7 @@ dependencies:
   flutter:
     sdk: flutter
   provider: ^6.0.1
-  linkfive_purchases: ^1.2.0
+  linkfive_purchases: ^1.3.0
     #path: ../linkfive_purchases
 
 dev_dependencies:
