--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -12,14 +12,16 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  linkfive_purchases:
-    path: ../packages/linkfive_purchases
-  linkfive_purchases_provider:
-    path: ../packages/linkfive_purchases_provider
+  linkfive_purchases: ^1.3.0
+    #path: ../packages/linkfive_purchases
+  linkfive_purchases_provider: ^1.3.0
+    #path: ../packages/linkfive_purchases_provider
   in_app_purchases_paywall_ui: ^0.5.0
     #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
   cupertino_icons: ^1.0.2
   provider: ^6.0.1
+  flutter_bloc: ^7.3.3
+  equatable: ^2.0.3
 
 dev_dependencies:
   flutter_test:
