--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -13,21 +13,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  in_app_purchase: ^1.0.6
-  http: ^0.13.3
+  in_app_purchase: ^2.0.1
+  http: ^0.13.4
   package_info_plus: ^1.3.0
-  device_info_plus: ^3.1.1
-  in_app_purchase_ios: ^0.1.3
-  in_app_purchase_platform_interface: ^1.1.0
-  in_app_purchase_android: ^0.1.4+1
+  device_info_plus: ^3.2.1
+  in_app_purchase_storekit: ^0.2.0
+  in_app_purchase_android: ^0.2.2
+  in_app_purchase_platform_interface: ^1.3.0
   in_app_purchases_interface: ^0.0.7
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_interface
   in_app_purchases_intl: ^0.0.3
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_intl
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.4
 
 flutter:
   plugin:
