--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,15 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  linkfive_purchases: ^1.5.0
-    #path: ../packages/linkfive_purchases
-  linkfive_purchases_provider: ^1.5.0
-    #path: ../packages/linkfive_purchases_provider
-  in_app_purchases_paywall_ui: ^0.5.0
-    #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
-  cupertino_icons: ^1.0.2
-  provider: ^6.0.1
-  flutter_bloc: ^7.3.3
+  linkfive_purchases: ^2.0.0-dev.2
+  #path: ../packages/linkfive_purchases
+  linkfive_purchases_provider: #^1.5.0
+    path: ../packages/linkfive_purchases_provider
+  in_app_purchases_paywall_ui: ^0.5.1
+  #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
+  cupertino_icons: ^1.0.4
+  provider: ^6.0.2
+  flutter_bloc: ^8.0.1
   equatable: ^2.0.3
 
 dev_dependencies:
