--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases
 description: Manage your in-app subscriptions with the LinkFive plugin - The Easiest Implementation of Subscriptions.
-version: 2.0.2
+version: 2.1.0
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
@@ -13,23 +13,24 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  in_app_purchase: ^3.0.2
+  in_app_purchase: ^3.0.6
   http: ^0.13.4
-  package_info_plus: ^1.4.0
-  device_info_plus: ^3.2.2
-  in_app_purchase_storekit: ^0.3.0+3
-  in_app_purchase_android: ^0.2.2+2
+  package_info_plus: ^1.4.2
+  device_info_plus: ^4.0.0
+  in_app_purchase_storekit: ^0.3.0+10
+  in_app_purchase_android: ^0.2.2+8
   in_app_purchase_platform_interface: ^1.3.1
   in_app_purchases_interface: ^0.0.8
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_interface
   in_app_purchases_intl: ^0.0.4
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_intl
-  shared_preferences: ^2.0.13
+  shared_preferences: ^2.0.15
 
 dev_dependencies:
-  test: ^1.21.1
-  flutter_lints: ^1.0.4
-
+  test: ^1.21.3
+  flutter_lints: ^2.0.1
+  mockito: ^5.2.0
+  build_runner: ^2.1.11
 
 flutter:
   plugin:
