--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -5,19 +5,19 @@ version: 0.0.1+1
 publish_to: 'none'
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.17.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  linkfive_purchases: ^2.0.2
+  linkfive_purchases: ^2.1.0
   #path: ../packages/linkfive_purchases
-  linkfive_purchases_provider: 2.0.2
+  linkfive_purchases_provider: ^2.1.0
     #path: ../packages/linkfive_purchases_provider
   in_app_purchases_paywall_ui: ^0.6.0
   #path: ../../in_app_purchases_paywall/packages/in_app_purchases_paywall_ui
-  cupertino_icons: ^1.0.4
-  provider: ^6.0.2
+  cupertino_icons: ^1.0.5
+  provider: ^6.0.3
   flutter_bloc: ^8.0.1
   equatable: ^2.0.3
 
