--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases
 description: Manage your in-app subscriptions with the LinkFive plugin - The Easiest Implementation of Subscriptions.
-version: 2.1.2
+version: 2.1.3
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
@@ -13,12 +13,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  in_app_purchase: ^3.0.6
-  http: ^0.13.4
-  package_info_plus: ^1.4.2
-  device_info_plus: ^4.0.0
-  in_app_purchase_storekit: ^0.3.0+10
-  in_app_purchase_android: ^0.2.2+8
+  in_app_purchase: ^3.0.7
+  http: ^0.13.5
+  package_info_plus: ^1.4.3+1
+  device_info_plus: ^4.1.2
+  in_app_purchase_storekit: ^0.3.1+1
+  in_app_purchase_android: ^0.2.3+3
   in_app_purchase_platform_interface: ^1.3.1
   in_app_purchases_interface: ^0.0.8
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_interface
@@ -27,10 +27,10 @@ dependencies:
   shared_preferences: ^2.0.15
 
 dev_dependencies:
-  test: ^1.21.3
+  test: ^1.21.4
   flutter_lints: ^2.0.1
-  mockito: ^5.2.0
-  build_runner: ^2.1.11
+  mockito: ^5.3.0
+  build_runner: ^2.2.0
 
 flutter:
   plugin:
