--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -15,14 +15,17 @@ dependencies:
     sdk: flutter
   in_app_purchase: ^3.0.7
   http: ^0.13.5
-  package_info_plus: ^1.4.3+1
-  device_info_plus: ^4.1.2
+  package_info_plus: ^4.0.0
+  device_info_plus: ^9.0.0
   in_app_purchase_storekit: ^0.3.1+1
   in_app_purchase_android: ^0.2.3+3
   in_app_purchase_platform_interface: ^1.3.1
   in_app_purchases_interface: ^0.0.8
-    #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_interface
-  in_app_purchases_intl: ^0.0.4
+  in_app_purchases_intl:
+    git:
+      url: https://github.com/Letalus/flutter-in_app_purchases_paywall.git
+      ref: update_dependencies
+      path: ./packages/in_app_purchases_intl
     #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_intl
   shared_preferences: ^2.0.15
 
