--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -14,26 +14,21 @@ dependencies:
   flutter:
     sdk: flutter
   in_app_purchase: ^3.0.7
-  http: ^0.13.5
-  package_info_plus: ^4.0.0
-  device_info_plus: ^9.0.0
+  http: ^1.0.0
+  package_info_plus: ^4.0.2
+  device_info_plus: ^9.0.2
   in_app_purchase_storekit: ^0.3.1+1
   in_app_purchase_android: ^0.2.3+3
-  in_app_purchase_platform_interface: ^1.3.1
-  in_app_purchases_interface: ^0.0.8
-  in_app_purchases_intl:
-    git:
-      url: https://github.com/Letalus/flutter-in_app_purchases_paywall.git
-      ref: update_dependencies
-      path: ./packages/in_app_purchases_intl
-    #path: ../../../in_app_purchases_paywall/packages/in_app_purchases_intl
-  shared_preferences: ^2.0.15
+  in_app_purchase_platform_interface: ^1.3.4
+  in_app_purchases_interface: ^1.0.0
+  in_app_purchases_intl: ^1.0.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
-  test: ^1.21.4
+  test: ^1.24.3
   flutter_lints: ^2.0.1
-  mockito: ^5.3.0
-  build_runner: ^2.2.0
+  mockito: ^5.4.1
+  build_runner: ^2.4.5
 
 flutter:
   plugin:
