--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -7,18 +7,18 @@ issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
 documentation: https://github.com/LinkFive/flutter-purchases-sdk
 
 environment:
-  sdk: ">=2.13.0 <3.0.0"
-  flutter: ">=1.20.0"
+  sdk: ^3.0.0
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  in_app_purchase: ^3.0.7
+  in_app_purchase: ^3.1.7
   http: ^1.0.0
   package_info_plus: ^4.0.2
   device_info_plus: ^9.0.2
-  in_app_purchase_storekit: ^0.3.1+1
-  in_app_purchase_android: ^0.2.3+3
+  in_app_purchase_storekit: ^0.3.6+4
+  in_app_purchase_android: ^0.3.0+5
   in_app_purchase_platform_interface: ^1.3.4
   in_app_purchases_interface: ^1.0.0
   in_app_purchases_intl: ^1.0.0
