--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -14,21 +14,23 @@ dependencies:
   flutter:
     sdk: flutter
   in_app_purchase: ^3.1.7
-  http: ^1.0.0
+  http: ^1.1.0
   package_info_plus: ^4.0.2
   device_info_plus: ^9.0.2
   in_app_purchase_storekit: ^0.3.6+4
-  in_app_purchase_android: ^0.3.0+5
+  in_app_purchase_android: ^0.3.0+10
   in_app_purchase_platform_interface: ^1.3.4
   in_app_purchases_interface: ^1.0.0
   in_app_purchases_intl: ^1.0.0
-  shared_preferences: ^2.1.2
+  shared_preferences: ^2.2.0
+  json_annotation: ^4.8.1
 
 dev_dependencies:
-  test: ^1.24.3
-  flutter_lints: ^2.0.1
-  mockito: ^5.4.1
-  build_runner: ^2.4.5
+  test: ^1.24.4
+  flutter_lints: ^2.0.2
+  mockito: ^5.4.2
+  build_runner: ^2.4.6
+  json_serializable: ^6.7.1
 
 flutter:
   plugin:
