--- a/packages/linkfive_purchases_provider/pubspec.yaml
+++ b/packages/linkfive_purchases_provider/pubspec.yaml
@@ -7,8 +7,8 @@ issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
 documentation: https://github.com/LinkFive/flutter-purchases-sdk
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  sdk: ^3.0.0
+  flutter: ">=3.10.0"
 
 dependencies:
   flutter:
