--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases
 description: Manage your in-app subscriptions with the LinkFive plugin - The Easiest Implementation of Subscriptions.
-version: 3.0.0-2.beta
+version: 3.0.0
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
@@ -21,7 +21,6 @@ dependencies:
   in_app_purchase_android: ^0.3.0+10
   in_app_purchase_platform_interface: ^1.3.4
   in_app_purchases_interface: ^1.0.0
-  in_app_purchases_intl: ^1.0.0
   shared_preferences: ^2.2.0
   json_annotation: ^4.8.1
 
