--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -1,6 +1,6 @@
 name: linkfive_purchases
 description: Manage your in-app subscriptions with the LinkFive plugin - The Easiest Implementation of Subscriptions.
-version: 4.0.0-1.beta
+version: 4.0.0
 homepage: https://www.linkfive.io
 repository: https://github.com/LinkFive/flutter-purchases-sdk
 issue_tracker: https://github.com/LinkFive/flutter-purchases-sdk/issues
