add httpClient with retry

--- a/packages/linkfive_purchases/pubspec.yaml
+++ b/packages/linkfive_purchases/pubspec.yaml
@@ -28,6 +28,7 @@ dev_dependencies:
   test: ^1.25.1
   flutter_lints: ^3.0.1
   mockito: ^5.4.4
+  mocktail: ^1.0.3
   build_runner: ^2.4.8
   json_serializable: ^6.7.1
 
